Fixing title alignment in home news feed.

--- a/system/cms/themes/pyrocms/css/workless.css
+++ b/system/cms/themes/pyrocms/css/workless.css
@@ -1563,7 +1563,9 @@ section.box {
 }
 
 #feed ul li h4 {
-	margin: -10px 0 0 0;
+	margin: 0 0 8px 0;
+	padding: 0;
+	line-height: 16px;
 	font-size: 16px;
 }
 
